Added images folder and fix css

--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@
         <h2>About Me</h2>
       </div>
       <section>
-          <p>My name is Dyllan Pham-Ada. Before I started learning to code I work at the Garden Grove Water Distruct. I found that the work that I was doing wasn't for me and I wanted a change in my life. </p>
-          <img src="https://scontent-lax3-2.xx.fbcdn.net/v/t31.18172-8/10498267_1040969932585262_6626372336570333628_o.jpg?_nc_cat=103&ccb=1-7&_nc_sid=174925&_nc_ohc=ocJ_MgHi8CMAX_iWbTs&_nc_ht=scontent-lax3-2.xx&oh=00_AfBo2wCQO-mmCqvYtpmKtJXWGgyvkDU_nsGwOH2lap7aFQ&oe=641B7B98" alt="Dyllan"/>
+          <p>Infasdjkflajsfljsdflnsd lsadkfjasjfoeinals sdflojweof asdflksjdf aisejf ;sakjf; iiwejf ;asdlkfjlwekfjsdhfu hwef asdhf hskfh iweh fsdjhf kasjhdf kh wieu fhailsdh fshad fh sid hfliwueh fia hsd ifhsidu hfiwehu fiuhs difhu iwuehf ishdfk jhsafkj hei naiefh aisueh fiuash eih si ehfi aushefiuhas eifhaise hfiash efihas e ifhasieu hfiashe fiuhas eifhasiefh iash eifh asei ufiash eifhasiefhu aishue fihas eifhasieuh aisueh ihase iufh asi ehfias heifh aiseuhf iauh efiuha e iuhfasiu ebnfhbsgjh waeifhiabnvi sahfdi uhi ehfaeiuh iasbn fisuadhfiahwseifu haisun fiauhs fihwaei fhaesh fiau sefiuah se ifhas fhaisu dhfiash fihwae ifuhasei fhasiefu haisd fish. </p>
+          <div>
+            <img src="https://scontent-lax3-2.xx.fbcdn.net/v/t31.18172-8/10498267_1040969932585262_6626372336570333628_o.jpg?_nc_cat=103&ccb=1-7&_nc_sid=174925&_nc_ohc=ocJ_MgHi8CMAX_iWbTs&_nc_ht=scontent-lax3-2.xx&oh=00_AfBo2wCQO-mmCqvYtpmKtJXWGgyvkDU_nsGwOH2lap7aFQ&oe=641B7B98" alt="Dyllan"/>
+          </div>
       </section>
       <div id="projects">
         <h2>Projects</h2>
       </div>
         <article>
-          <section class="card"><a href="https://quailll.github.io/Mini-project/">Form</a>
-            <img src="https://static.vecteezy.com/system/resources/previews/003/582/701/original/coming-soon-background-illustration-template-design-free-vector.jpg" alt="coming soon"/>
+          <section id="large" class="card"><a href="https://quailll.github.io/Mini-project/">Form</a>
+            <img id="largeImg" src="https://static.vecteezy.com/system/resources/previews/003/582/701/original/coming-soon-background-illustration-template-design-free-vector.jpg" alt="coming soon"/>
           </section>
-          <section class="card">CSS Snippet Cheat Sheet
+          <section class="card"><a href="#"> CSS Snippet Cheat Sheet</a>
             <img
                 src="https://static.vecteezy.com/system/resources/previews/003/582/701/original/coming-soon-background-illustration-template-design-free-vector.jpg"
                 alt="coming soon"/>
@@ -69,15 +71,21 @@
             <img
                 src="https://static.vecteezy.com/system/resources/previews/003/582/701/original/coming-soon-background-illustration-template-design-free-vector.jpg"
                 alt="coming soon"/>
-          </section>
-          <section class="card">Coming Soon
-            <img
-              src="https://static.vecteezy.com/system/resources/previews/003/582/701/original/coming-soon-background-illustration-template-design-free-vector.jpg"
-              alt="coming soon"/>
           </section>
       </article>
     </main>
 
-    
+    <footer>
+      <div id="contact-me"> 
+        <h2>Contact Me</h2>
+      </div>
+      <section>
+        <ul>
+          <li><a href="https://github.com/Quailll"> Github</a></li>
+          <li><a href="mailto:dphamada92@gmail.com"> Email</a></li>
+          <li><a href="number"> Number</a></li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
