change url for music forecast

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 src="https://static.vecteezy.com/system/resources/previews/003/582/701/original/coming-soon-background-illustration-template-design-free-vector.jpg"
                 alt="coming soon"/>
           </section>
-          <section class="card"><a href="https://kyle-mucerino.github.io/Booking/index.html">Music Forecast</a>
+          <section class="card"><a href="https://kyle-mucerino.github.io/Music-Forecast/index.html">Music Forecast</a>
             <img src="./assets/images/Screenshot 2023-03-13 at 11-35-16 Music Forecast.png"
                 alt="music forecast webpage"/>
           </section>
