added sneakers project

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <img src="./assets/images/Screenshot 2023-03-13 at 11-35-16 Music Forecast.png"
                 alt="music forecast webpage"/>
           </section>
-          <section class="card">Coming Soon
+          <section class="card"><a href="https://fathomless-lake-56395.herokuapp.com/">Sneakers</a>
             <img
-                src="https://static.vecteezy.com/system/resources/previews/003/582/701/original/coming-soon-background-illustration-template-design-free-vector.jpg"
-                alt="coming soon"/>
+                src="./assets/images/Screen_Shot_2023-04-10_at_5.53.39_PM.png"
+                alt="sneakers webpage"/>
           </section>
           <section class="card">Coming Soon
             <img
